--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -1,7 +1,7 @@
 #--------------------------------------------- TOTEM ------------------------------------------------
 
 @Article{totem04,
-		author="TOTEM collaboration",
+		author="TOTEM",
 		title="Technical design report",
 		pages="CERN-LHCC-2004-002",
 		year="2004",
@@ -9,7 +9,7 @@
 }
 
 @Article{totem-blois06,
-		author="TOTEM collaboration",
+		author="TOTEM",
 		title="TOTEM physics",
 		year="2006",
 		journal="XIth Blois Conference"
@@ -282,6 +282,17 @@
       year           = "1975",
 }
 
+@Article{gayou02,
+      collaboration  = "Jefferson Lab Hall A",
+      author         = "O. Gayou et al.",
+      title          = "Measurement of G(Ep) / G(Mp) in polarized-e p ---> e polarized-p to Q**2 = 5.6-GeV**2",
+      journal        = "Phys.Rev.Lett.",
+      volume         = "88",
+      pages          = "092301",
+      doi            = "10.1103/PhysRevLett.88.092301",
+      year           = "2002",
+}
+
 @Article{guichon03,
       author         = "P. A. M., Guichon and M. Vanderhaeghen",
       title          = "How to reconcile the Rosenbluth and the polarization
@@ -307,6 +318,13 @@
   doi = "10.1103/PhysRevC.70.068202",
 }
 
+@Article{mele06,
+      author         = "S. Mele",
+      title          = "Measurements of the running of the electromagnetic coupling at LEP",
+      year           = "2006",
+      eprint         = "arXiv:hep-ex/0610037",
+}
+
 @Article{arrington07,
       author         = "J. Arrington, W. Melnitchouk and J. A. Tjon",
       title          = "Global analysis of proton elastic form factor data with
@@ -319,14 +337,12 @@
 }
 
 @Article{puckett10,
-      author         = " A. J. R. Puckett",
+      collaboration  = "GEp-III",
+      author         = "A. J. R. Puckett",
       title          = "Final Results of the GEp-III Experiment and the Status
                         of the Proton Form Factors",
-      collaboration  = "GEp-III Collaboration",
       year           = "2010",
-      eprint         = "1008.0855",
-      archivePrefix  = "arXiv",
-      primaryClass   = "nucl-ex",
+      eprint         = "arXiv:nucl-ex/1008.0855",
 }
 
 #------------------------------------------ ELASTIC THEORY ------------------------------------------
