--- a/2010/thesis/thesis.tex
+++ b/2010/thesis/thesis.tex
@@ -18,11 +18,11 @@
 \Reftrue
 \Toctrue
 
-\iftrue
+\iffalse
 	% to show labels
 	\ShowLabelstrue \advance\hoffset-1cm
 \else
-	\def\FootText{(VERSION 2)}
+	\def\FootText{(VERSION 3)}
 \fi
 
 \def\pmt#1{\hbox{\tt[#1]}}
@@ -40,6 +40,7 @@
 \centerline{\fPbxiv Jan Ka\v spar}
 \vskip1cm
 \centerline{\fPbxx Elastic scattering at the LHC}
+\centerline{\fPbxx\FootText}
 \vskip2cm
 \centerline{\fPbxiv Institute of Particle and Nuclear Physics}
 \ialign to\hsize{\tabskip 0pt plus1fil\strut #&\hfil\fPbxiv #\ \tabskip0pt&\fPbxiv #\hfil\tabskip 0pt plus1fil\cr
@@ -77,13 +78,32 @@
 
 \SpecialChapter{List of Abbreviations}
 
-\DefAbb{CERN}{(Conseil Europ\' eenne pour la Recherche Nucl\' eaire) European Organization for Nuclear Research in Geneva.}
-\DefAbb{LHC}{(Large Hadron Collider) The largest collider in the world.}
-\DefAbb{TOTEM}{(TOTal and Elastic Measurements) An LHC experiment focused on the forward hadronic phenomena.}
-\DefAbb{RP}{(Roman Pot) A a pot-shaped movable beam-pipe insertion, see section \TODO{?}}
-\DefAbb{BPM}{(Beam Position Monitor)}
-\DefAbb{BLM}{(Beam Loss Monitor)}
-\DefAbb{LVDT}{(Linear Voltage Differential Transformator) A device that determines positions of TOTEM Roman Pots.}
+\DefAbb{ATLAS ALFA}{}{}
+\DefAbb{BFKL}{Balitsky-Fadin-Kuraev-Lipatov}{Resumation of gluon ladders leading to a ``hard pomeron'', see e.g. Ch.~8 in \abref{barone}.}
+\DefAbb{BLM}{Beam Loss Monitor}{}
+\DefAbb{BPM}{Beam Position Monitor}{}
+\DefAbb{CERN}{Conseil Europ\' eenne pour la Recherche Nucl\' eaire}{European Organization for Nuclear Research in Geneva.}
+\DefAbb{CKL}{corrected Kundr\' at-Lokaj\' i\v cek}{Refers to the Coulomb-interference formula Eq.~\ref{el phase CKL}.}
+\DefAbb{CMS}{Center Of Mass reference system}{}
+\DefAbb{HP}{Hard Pomeron}{A version of the model of Islam et al., see Sec.~\sref{el models}.}
+\DefAbb{IR}{InfraRed}{}
+\DefAbb{KL}{Kundr\' at-Lokaj\' i\v cek}{Refers to the Coulomb-interference formula Eq.~\ref{el phase KL}.}
+\DefAbb{LHC}{Large Hadron Collider}{The largest collider in the world.}
+\DefAbb{LxG}{Low-$x$ gluons}{A version of the model of Islam et al., see Sec.~\sref{el models}.}
+\DefAbb{LVDT}{Linear Voltage Differential Transformator}{A device that determines positions of TOTEM Roman Pots.}
+\DefAbb{OPE}{One Photon Exchange}{An approximation in QED.}
+\DefAbb{QED}{Quantum ElectroDynamics}{}
+\DefAbb{QFT}{Quantum Field Theory}{}
+\DefAbb{QCD}{Quantum ChromoDynamics}{}
+\DefAbb{QM}{Quantum Mechanics}{}
+\DefAbb{RMS}{Root Mean Square}{}
+\DefAbb{RP}{Roman Pot}{A a pot-shaped movable beam-pipe insertion, see section \TODO{?}}
+\DefAbb{SWY}{Simplified West-Yennie}{Refers to the Coulomb-interference formula Eq.~\ref{el phase SWY}.}
+\DefAbb{TDR}{Technical Design Report}{}
+\DefAbb{TOTEM}{TOTal and Elastic Measurements}{An LHC experiment focused on the forward hadronic phenomena.}
+\DefAbb{TPE}{Two Photon Exchange}{An approximation in QED.}
+\DefAbb{WY}{West-Yennie}{Refers to the Coulomb-interference formula Eq.~\ref{el phase WY}.}
+
 
 \PrintAbbreviations
 
