before removing sigma tot chapter
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@4143 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/elasticReco.tex
+++ b/2010/thesis/elasticReco.tex
@@ -152,7 +152,7 @@ One may also define variable $\de$
 \eqref{\de^2 = {(t_x' - t_x)^2\over t_x^2} \Rightarrow \sqrt{\Exp{\de^2}} = {\si_{t_x'}\over t_x}}{delta for tx}
 \fi
 
-\subsection[1540]{Performance at $\mathbf{\be^*=1540\un{m}}$ optics}
+\subsection[1540]{Performance at 1540 m optics}
 
 The reconstruction method was probed on a sample of $10^4$ elastic events, generated in $t$-range $10^{-3}\un{GeV^2}$ to $1.5\un{GeV^2}$. The actual parameters of optics and detector geometry are summarized in \Tb{optics}. The simulation was carried out first without beam smearing and then including it (see the next two subsections). The beam smearing characteristics can be found in \Tb{smearing}.
 
@@ -250,7 +250,7 @@ As the last comment, let's address the detector shifts. Displacing horizontal de
 
 
 
-\subsection[90]{Performance at $\mathbf{\be^* = 90\un{m}}$ optics}
+\subsection[90]{Performance at 90 m optics}
 
 Relevant parameters of this optics are summarized in \Tb{optics}. Immediately, one can see this optics has very low effective lengths $L_x$, which requires a special treatment. First, the selection algorithm is not intended for such a case and therefore the $x$ road size should be set to a large number in order to let everything pass (the two dimensional road search is, then, reduced to one dimension). Similarly, this is the reason for bad $\th_x$ reconstruction performance. Thus no constraints should be imposed on $\th_x$ (this is equivalent to very large tolerance parameter).
 
