--- a/2010/thesis/extrapolation.tex
+++ b/2010/thesis/extrapolation.tex
@@ -148,11 +148,11 @@ As a model independent deviation we used average over models ($m$ stands for num
 \eqref{\bar\de = {1\over m}\sum_{i=1}^{m} |\de_i|}{deviation avg}
 
 
-\subsection{Fit results for $\be^* = 1535\un{m}$}
+\subsection{Fit results for 1535 m optics}
 
 From the analysis above we can conclude already: the effect of smearing is negligible because of fine resolution and it is necessary to include coulomb interaction to fitting model. We recall $|t_{min}| = 2\cdot10^{-3}\un{GeV^2}$ for this optics.
 
-\ssubsection{Modulus extrapolation ($\d\si/\d t|_{t=0}$ extrapolation)}
+\ssubsection{Modulus extrapolation}
 
 In the first step we tried to determine applicable values of $n_p$. Sample plots for various $n_p$ and $n_m$ are shown at \Fg{1535 np}. One can see that just $n_p = 1$ gives reasonable results, the others do not get bellow $1\un{\%}$ . Thus we set $n_p = 1$.
 
@@ -225,7 +225,7 @@ Looking at \Tb{1535 best par} one may question why the BSW model gives much wors
 
 
 
-\ssubsection{Phase extrapolation ($\rh$ extrapolation)}
+\ssubsection{Phase extrapolation}
 
 We performed the analysis in the same order as above and determined useful values of $n_p$ first (see \Fg{1535p np1,1535p np2}). One can see that $n_m=2$ gives poor results for both $n_p$. The remaining plots look promising and all prefer small values of $w$. Nevertheless, the fits with $n_p=2$ are fake, since obtained slope of phase (i.e. $\d P(t)/\d t$) disagrees totally with theory. That is why we dismissed $n_p=2$ fits.
 \bmfig[Comparison of various $n_m$ at $n_p = 1$ and non-incremental fitting.\flab{1535p np1}]
@@ -284,7 +284,7 @@ For better orientation we plotted details for some low values of $w$, see \Fg{15
 
 
 
-\subsection{Fit results for $\be^* = 90\un{m}$}
+\subsection{Fit results for 90 m optics}
 As it was already stated above, the resolution smearing plays important role for this running scenario and it should be corrected properly. We also anticipated that phase of hadronic scattering amplitude $T_H(t)$ cannot be acquired from fits. This fact is documented at \Fg{90p}. Therefore we fixed $n_p = 0$. Besides these, we proceeded just as for the previous optics. First we tried to fix $n_m$, results are shown at \Fg{90 nm}. We remind $|t_{min}| = 4\cdot10^{-2}\un{GeV^2}$ for this scenario.
 
 
