--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -357,6 +357,17 @@
      doi       = "10.1016/0003-4916(58)90017-4",
 }
 
+@Article{jacob59,
+	author = "M. Jacob and G. C. Wick"
+	title = "On the general theory of collisions for particles with spin",
+	journal = "Annals of Physics",
+	volume = "7",
+	number = "4",
+	pages = "404 - 428",
+	year = "1959",
+	doi = "10.1016/0003-4916(59)90051-X",
+}
+
 @Article{yennie61,
       author         = "D. R. Yennie, S. C. Frautschi and H. Suura",
       title          = "The infrared divergence phenomena and high-energy
@@ -446,8 +457,7 @@
 	number = "3",
 	pages = "511 - 532",
 	year = "1976",
-	note = "",
-	doi = "DOI: 10.1016/0550-3213(76)90115-2",
+	doi = "10.1016/0550-3213(76)90115-2",
 }
 
 @Article{buttimore78,
@@ -458,7 +468,28 @@
       volume         = "D18",
       pages          = "694-716",
       doi            = "10.1103/PhysRevD.18.694",
-      year           = "1978",
+      year           = "1978"
+}
+
+@Article{kroll78,
+  author="P. Kroll, E. Leader and W. von Schlippe",
+  title="Structure of the I=1 nucleon-nucleon amplitudes at 6 GeV/c",
+  journal="Journal of Physics G: Nuclear Physics",
+  volume="4",
+  number="7",
+  pages="1003",
+  year="1978"
+}
+
+
+@Article{kroll79,
+  author="P. Kroll, E. Leader and W. von Schlippe",
+  title="Interpretation of the spin structure in nucleon-nucleon scattering",
+  journal="Journal of Physics G: Nuclear Physics",
+  volume="5",
+  number="9",
+  pages="1179",
+  year="1979"
 }
 
 @Article{cahn82,
@@ -468,6 +499,18 @@
 		volume="C15",
 		year="1982",
 		pages="253"
+}
+
+@Article{martin85,
+	author = "A. Martin",
+	title = "ELASTIC SCATTERING AND SPIN PHYSICS",
+	DOI= "10.1051/jphyscol:1985294",
+	url= "http://dx.doi.org/10.1051/jphyscol:1985294",
+	journal = "J. Phys. Colloques",
+	year = 1985,
+	volume = 46,
+	number = C2,
+	pages = "727-728",
 }
 
 @Article{klk87,
