--- a/2010/thesis/thesis.tex
+++ b/2010/thesis/thesis.tex
@@ -58,12 +58,12 @@
 
 \BeginText
 
-%\input introduction.tex
+\input introduction.tex
 \input elastic.tex
-%\input totem.tex
-%\input simu_reco.tex
-%\input alignment.tex
-%\input sigma_tot.tex
+\input totem.tex
+\input simu_reco.tex
+\input alignment.tex
+\input sigma_tot.tex
 
 \appendices
 
