chapter structure updated
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@4145 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/totem.tex
+++ b/2010/thesis/totem.tex
@@ -153,3 +153,9 @@ Keeping only the important terms
 \eqref{\si_\xi = }{to energy fl}
 
 \eqref{\bar\xi = }{to energy off}
+
+\section{Luminosity independent method}
+
+\section{Extrapolation studies}
+
+\input extrapolation
