--- a/2010/thesis/thesis.tex
+++ b/2010/thesis/thesis.tex
@@ -18,11 +18,11 @@
 \Reftrue
 \Toctrue
 
-\iffalse
+\iftrue
 	% to show labels
 	\ShowLabelstrue \advance\hoffset-1cm
 \else
-	\def\FootText{(VERSION 3)}
+	\def\FootText{(VERSION 4)}
 \fi
 
 \def\pmt#1{\hbox{\tt[#1]}}
@@ -58,12 +58,12 @@
 
 \BeginText
 
-\input introduction.tex
+%\input introduction.tex
 \input elastic.tex
-\input totem.tex
-\input simu_reco.tex
-\input alignment.tex
-\input sigma_tot.tex
+%\input totem.tex
+%\input simu_reco.tex
+%\input alignment.tex
+%\input first_el_measurement.tex
 
 \appendices
 
