--- a/2010/thesis/thesis.tex
+++ b/2010/thesis/thesis.tex
@@ -59,11 +59,11 @@
 \BeginText
 
 %\input introduction.tex
-\input elastic.tex
+%\input elastic.tex
 %\input totem.tex
 %\input simu_reco.tex
 %\input alignment.tex
-%\input first_el_measurement.tex
+\input first_el_measurement.tex
 
 \appendices
 
