--- a/2010/thesis/thesis.tex
+++ b/2010/thesis/thesis.tex
@@ -104,8 +104,7 @@
 \DefAbb{TPE}{Two Photon Exchange}{An approximation in QED.}
 \DefAbb{WY}{West-Yennie}{Refers to the Coulomb-interference formula Eq.~\ref{el phase WY}.}
 
-
-\PrintAbbreviations
+%\PrintAbbreviations
 
 \EndText
 
