--- a/2010/thesis/elasticReco.tex
+++ b/2010/thesis/elasticReco.tex
@@ -12,13 +12,13 @@ Regardless whether the IP information is used, input data form a list of $(x, \s
 
 \subsection[method]{Method}
 Tracks of protons travelling from IP to detectors can be well described by\footnote{We use the standard coordinate frame: $s$ axis goes along beam in clock-wise direction and $x$ points outside the ring. $y$ axis is chosen such as the coordinate system is right-handed.}
-\eqref{x(s) = L_x(s)\, \th_x^* + v_x(s)\, x^* + D(s)\,\xi\qquad y(s) = L_y(s)\, \th_y^* + v_y(s)\, y^*\ ,}{track general}
+\eqref{x(s) = L_x(s)\, \th_x^* + v_x(s)\, x^* + D(s)\,\xi\qquad y(s) = L_y(s)\, \th_y^* + v_y(s)\, y^*\ ,}{elr track general}
 where the quantities with stars refer to the state of the proton at IP. For elastic scattering $\xi\equiv 0$ and therefore dependencies for both coordinates obtain the same form. Thus, $\ze$ will be used to refer to whichever of $x$ and $y$ variables.
 
 Obviously, the fitting model used is
-\eqref{\ze(s) = v(s)\,\ze^* + L(s)\,\th^* \.}{fit model}
+\eqref{\ze(s) = v(s)\,\ze^* + L(s)\,\th^* \.}{elr fit model}
 Working out the linear fit equations (see e.g. Eq. (6.23) in \bref{barlow}), the estimate for vertex position $\ze^*$ and scattering angle (at vertex) $\th^*$ is
-\eqref{\pmatrix{\ze^*\cr\th^*} = {1\over \sum v^2 \sum L^2 - \sum vL \sum vL} \pmatrix{\sum L^2 \sum \ze v - \sum vL \sum \ze L\cr -\sum vL \sum \ze v + \sum v^2 \sum \ze L} \ ,}{fit}
+\eqref{\pmatrix{\ze^*\cr\th^*} = {1\over \sum v^2 \sum L^2 - \sum vL \sum vL} \pmatrix{\sum L^2 \sum \ze v - \sum vL \sum \ze L\cr -\sum vL \sum \ze v + \sum v^2 \sum \ze L} \ ,}{elr fit}
 where for instance $\sum \ze L$ means $\sum_{i} \ze(s_i) L(s_i) / \si^2(s_i)$. The sums go over all detectors involved in the event and $\ze(s_i)$ is the hit position in corresponding detector. $\si$ denotes measurement uncertainty. The covariance matrix (see e.g. Eq. (6.24) in \bref{barlow})
 \eqref{\mathop{\rm Var}[\ze^*, \th^*] = {1\over \sum v^2 \sum L^2 - \sum vL \sum vL} \pmatrix{\sum L^2 & - \sum vL \cr -\sum vL & \sum v^2 }\.
 }{fit err}
@@ -36,7 +36,7 @@ $$\th^* = {1\over 2} {L(216) \big(\ze(216) - \ze(-216)\big)\ +\ L(220)\big( \ze(
 
 The algorithm comprises the three steps below.
 \bitm
-\itm \em{Hit selection}. The aim of this step is to choose from all the hits only those which belong to the actual track (of elastic protons). Which in turn means to suppress background and tracks from secondary interactions in detectors etc. It is assumed that the $L\,\th^*$ term dominates in \Eq{fit model}, i.e\hbox{.} at least approximate parallel-to-point focusing. For each hit, value of $\ze(s) / L(s)$ is calculated and a road search algorithm is applied. Only road with the highest weight and at least one hit on both sides can continue. Parameters of this search are (angular) road sizes for $x$ and $y$ projections.
+\itm \em{Hit selection}. The aim of this step is to choose from all the hits only those which belong to the actual track (of elastic protons). Which in turn means to suppress background and tracks from secondary interactions in detectors etc. It is assumed that the $L\,\th^*$ term dominates in \Eq{elr fit model}, i.e\hbox{.} at least approximate parallel-to-point focusing. For each hit, value of $\ze(s) / L(s)$ is calculated and a road search algorithm is applied. Only road with the highest weight and at least one hit on both sides can continue. Parameters of this search are (angular) road sizes for $x$ and $y$ projections.
 
 \fig[12cm]{erfig/asy/roadSearch.pdf}{road search}{[]Principle of the road search algorithm. Left: hits in RPs shown vs\hbox{.} corresponding effective length. Hits by elastic protons displayed in blue, background in red. Right: histogram of angles $y/L_y$. Elastic hits pile up to high tower (i.e. road with highest weight).}
 
@@ -56,12 +56,12 @@ $$L(-s) = - L(s),\qquad v(-s) = v(s)$$
 (that assumption is true for ideal $1540$ and $90\un{m}$ optics). Then\footnote{%
 In fact, one has to assume the fit to be symmetric too. That means if a RP at $s$ was hit, its partner at $-s$ was involved too. However, this should be true for most events.
 }, the fit equation boils down to
-\eqref{\ze^* = {\sum\ze v\over\sum v^2},\qquad \th^* = {\sum\ze L\over\sum L^2}\ .}{fit sym}
+\eqref{\ze^* = {\sum\ze v\over\sum v^2},\qquad \th^* = {\sum\ze L\over\sum L^2}\ .}{elr fit sym}
 One can clearly see that the IP measurement has no impact on angular reconstruction of $\th^*$. As effective length associated to IP is zero, both numerator and denominator remain unchanged. The situation is different for $\ze^*$ reconstruction, so let's rewrite the expression explicitly separating RP and IP contributions
 $$\ze^* = {\sum{\ze_i v_i\over\si_i^2} + {\ze_{\rm IP}\over \si^2_{\rm IP}}\over \sum {v_i^2\over\si_i^2} + {1\over\si_{\rm IP}^2}}\ ,$$
 where the index $i = 1\ldots N$ labels RP hits. Looking at denominator, one can estimate that the influence of IP information would be irrelevant if
-\eqref{v \gg {1\over\sqrt N}\,{\si\over\si_{\rm IP}}\ ,}{IP irrelevant}
-where $v$ denotes a typical value of $v_i$ and similarly $\si$ means typical $\si_i$. Validity of this condition can verified with use of \Tb{optics,smearing}. For $1540\un{m}$ optics one finds both sides of \Eq{IP irrelevant} to be of order $10^{-2}$ and thus the condition is false. While for $90\un{m}$ optics the condition $2 \gg 6\cdot10^{-2}$ is true. Anyway, vertex reconstruction is not our primary concern and therefore IP information will not be used unless necessary.
+\eqref{v \gg {1\over\sqrt N}\,{\si\over\si_{\rm IP}}\ ,}{elr IP irrelevant}
+where $v$ denotes a typical value of $v_i$ and similarly $\si$ means typical $\si_i$. Validity of this condition can verified with use of \Tb{optics,smearing}. For $1540\un{m}$ optics one finds both sides of \Eq{elr IP irrelevant} to be of order $10^{-2}$ and thus the condition is false. While for $90\un{m}$ optics the condition $2 \gg 6\cdot10^{-2}$ is true. Anyway, vertex reconstruction is not our primary concern and therefore IP information will not be used unless necessary.
 
 The necessity for IP information may be seen in the following example. Imagine the situation where only one RP per arm was active in the event. We need to perform one-arm fits to verify the identity of the event, but one hit is not enough to fit two parameters. This is the only case when the IP information is used.
 
@@ -81,7 +81,7 @@ In order to cross-check performance of the reconstruction method, it is desirabl
 
 To keep the calculation smooth, I adopted the assumptions below. Many of those are not precisely fulfilled, but the error caused by them is not dramatic for the purpose of error estimate.
 \bitm
-\itm The optics is symmetric, therefore the $v$-terms in track parameterization (see \Eq{fit model}) cancel out.
+\itm The optics is symmetric, therefore the $v$-terms in track parameterization (see \Eq{elr fit model}) cancel out.
 \itm Absolute values of $|L_x|$ for all RPs do not differ drastically\footnote{%
 For instance, for $1540\un{m}$ optics $L_x$ ranges from $99$ to $113\un{m}$ and $L_y$ from $248$ to $272\un{m}$. Therefore, the approximation of unique effective length brings error of roughly $10\un{\percent}$.
 }
@@ -92,21 +92,21 @@ and can be well approximated by $\pm L_x$. The $+$ sign holds for RPs at right a
 \eitm
 
 \vskip2mm
-Under these assumptions, the fit equation (\Eq{fit}) can be simplified to
-\eqref{\th_x' = {1\over N\,L_x} \left( \sum_{\rm right} x_i - \sum_{\rm left} x_i \right)\.}{fit 2}
+Under these assumptions, the fit equation (\Eq{elr fit}) can be simplified to
+\eqref{\th_x' = {1\over N\,L_x} \left( \sum_{\rm right} x_i - \sum_{\rm left} x_i \right)\.}{elr fit 2}
 From now on, symbols with prime will be related to measured values while prime-less symbols will refer to the true or unsmeared value. 
 
-If there were no errors and smearings, $x_i$ would be given by parameterization \Eq{fit model}. But as those are present, one needs to generalize the dependence. Since we assume symmetric optics, we may drop out the $v$-term and write down
-\eqref{x_i = L_x \th_x^{\rm smeared} + \De x_i \.}{fit model 2}
+If there were no errors and smearings, $x_i$ would be given by parameterization \Eq{elr fit model}. But as those are present, one needs to generalize the dependence. Since we assume symmetric optics, we may drop out the $v$-term and write down
+\eqref{x_i = L_x \th_x^{\rm smeared} + \De x_i \.}{elr fit model 2}
 We replaced $\th_x$ by its smeared value and added a term which describes discretization to the given pitch. It is natural to assume that $\De x_i$ follows uniform distribution $U(-P/2, P/2)$, where $P$ stands for the detector pitch. For completeness, $\si_{\De x} = P / \sqrt{12}$. Later on, we will also assume $\De x_i$ to be independent for different RPs.
 
 \TODO{Section \Sc{beam smearing}}
 In note \bref{smearing} an analysis of angular smearing has been carried out for particles scattered to small angles (i.e. particles that can be detected by Roman Pots). It shows that the effect of smearing is equivalent to modification of particles' direction (see Eq. (16) in \bref{smearing})
-\eqref{\matrix{\th_x\equiv\th\cos\ph \rightarrow \th\cos\ph + \De\th_x^{L, R}\cr\th_y\equiv\th\sin\ph \rightarrow \th\sin\ph + \De\th_y^{L, R}}  \ ,}{angular smearing}
+\eqref{\matrix{\th_x\equiv\th\cos\ph \rightarrow \th\cos\ph + \De\th_x^{L, R}\cr\th_y\equiv\th\sin\ph \rightarrow \th\sin\ph + \De\th_y^{L, R}}  \ ,}{elr angular smearing}
 where the standard notation is followed: $\th$ denotes scattering angle and $\ph$ is azimuthal angle. By the $L, R$ superscript we want to emphasize that the shift has different values for particles at left and right arm.
 
-Inserting \Eq{fit model 2,angular smearing} to \Eq{fit 2} yields
-\eqref{\th_x' = \th_x + \de\th_x + {1\over L_x} \de x,\qquad \de\th_x = {\De\th_x^{R} + \De\th_x^{L}\over 2}, \qquad \de x = {1\over N} \left( \sum^{N/2}_{\rm right} \De x_i - \sum^{N/2}_{\rm left} \De x_i \right)}{fit simple}
+Inserting \Eq{elr fit model 2,angular smearing} to \Eq{elr fit 2} yields
+\eqref{\th_x' = \th_x + \de\th_x + {1\over L_x} \de x,\qquad \de\th_x = {\De\th_x^{R} + \De\th_x^{L}\over 2}, \qquad \de x = {1\over N} \left( \sum^{N/2}_{\rm right} \De x_i - \sum^{N/2}_{\rm left} \De x_i \right)}{elr fit simple}
 Clearly, mean values of both $\de\th_x$ and $\de x$ are zero. 
 
 !!!
@@ -116,7 +116,7 @@ All the simulations in this note were performed using the smearing parameterizat
 
 -- one obtains $\si_{\de\th_x} = \si_\th / 2$, where $\si_\th$ denotes sigma of beam divergence.
 
-\TODO{Correct the formulae}: $\si_{\de\th_x} = \si_{bd} / \sqrt{2}$, hence \Eq{t' resolution} should read $A = 2p \sqrt{{\si^2_{bd}\over 2} \ldots}$
+\TODO{Correct the formulae}: $\si_{\de\th_x} = \si_{bd} / \sqrt{2}$, hence \Eq{elr t' resolution} should read $A = 2p \sqrt{{\si^2_{bd}\over 2} \ldots}$
 \TODO{Modify the beam div. values in \Tb{smearing} to match the new/correct parameterization. Explain the problem?}
 
 !!!
@@ -125,31 +125,31 @@ All the simulations in this note were performed using the smearing parameterizat
 And finally, $\si_{\de x} = P / \sqrt{12N}$.
 
 Taking into account definitions ($t$, $t_x$ and $t_y$ are considered as positive here)
-\eqref{t = p^2\th^2,\qquad t_x = t\cos^2\ph, \qquad t_y = t\sin^2\ph ,}{t def}
-\Eq{fit simple} can be rewritten in terms of $t$ components:
-\eqref{t_x' = t\cos^2\ph + p^2\de^2\th_x + {p^2\over L_x^2}\de x^2 + 2p\sqrt{t}\cos\ph \left( \de\th_x + {1\over L_x}\de x \right).}{tx'}
+\eqref{t = p^2\th^2,\qquad t_x = t\cos^2\ph, \qquad t_y = t\sin^2\ph ,}{elr t def}
+\Eq{elr fit simple} can be rewritten in terms of $t$ components:
+\eqref{t_x' = t\cos^2\ph + p^2\de^2\th_x + {p^2\over L_x^2}\de x^2 + 2p\sqrt{t}\cos\ph \left( \de\th_x + {1\over L_x}\de x \right).}{elr tx'}
 The relation for $t_y'$ can be obtained by swapping $x\leftrightarrow y$ and $\cos\ph\leftrightarrow\sin\ph$. 
 
 One can easily calculate mean value of $t_x'$ while keeping $t_x$ fixed (all terms linear in perturbations drop out because of their zero mean values):
-\eqref{\Exp{t_x'} = t_x + p^2 \left({\si_{\th}^2\over 4} + {P^2\over 12N\,L_x^2}\right).}{tx' mean}
+\eqref{\Exp{t_x'} = t_x + p^2 \left({\si_{\th}^2\over 4} + {P^2\over 12N\,L_x^2}\right).}{elr tx' mean}
 Similarly, mean value of $t'$ when $t$ is fixed reads
-\eqref{\Exp{t'} = t + p^2 \left({\si_{\th}^2\over 2} + {P^2\over 12N\,L_x^2} + {P^2\over 12N\,L_y^2}\right).}{t' mean}
+\eqref{\Exp{t'} = t + p^2 \left({\si_{\th}^2\over 2} + {P^2\over 12N\,L_x^2} + {P^2\over 12N\,L_y^2}\right).}{elr t' mean}
 
 In order to evaluate $\si_{t_x'}$, we need to calculate $\Exp{t_x'^2}$. It is evident that terms linear in $\de\th_x$ and $\de x$ will not contribute. Also, to keep the calculation simple, terms higher than quadratic were not included. 
-\eqref{t_x'^2 = t_x^2 + 6 p^2 t_x \left( \de^2\th_x + {1\over L_x^2}\de^2 x \right) + \ldots}{tx' sq}
+\eqref{t_x'^2 = t_x^2 + 6 p^2 t_x \left( \de^2\th_x + {1\over L_x^2}\de^2 x \right) + \ldots}{elr tx' sq}
 And analogically
-\eqref{t'^2 = t^2 + 2 p^2 t \left[ (1 + 2\cos^2\ph) \left(\de^2\th_x + {1\over L_x^2}\de^2 x \right) + (1 + 2\sin^2\ph) \left(\de^2\th_y + {1\over L_y^2}\de^2 y \right)\right] + \ldots}{t' sq}
+\eqref{t'^2 = t^2 + 2 p^2 t \left[ (1 + 2\cos^2\ph) \left(\de^2\th_x + {1\over L_x^2}\de^2 x \right) + (1 + 2\sin^2\ph) \left(\de^2\th_y + {1\over L_y^2}\de^2 y \right)\right] + \ldots}{elr t' sq}
 
 It is straight-forward to show that
-\eqref{\si^2_{t_x'} \equiv \Exp{t_x'^2} - \Exp{t_x'}^2 = 4 p^2 t_x \left({\si_{\th}^2\over 4} + {P^2\over 12N\,L_x^2}\right)\qquad \hbox{for fixed }t_x\ ,}{tx' sigma}
-\eqref{\si^2_{t'} \equiv \Exp{t'^2} - \Exp{t'}^2 = 4 p^2 t \left[{\si_{\th}^2\over 4} + {P^2\over 24N}\left({1\over L_x^2} + {1\over L_y^2}\right)\right]\qquad \hbox{for fixed }t\ .}{t' sigma}
+\eqref{\si^2_{t_x'} \equiv \Exp{t_x'^2} - \Exp{t_x'}^2 = 4 p^2 t_x \left({\si_{\th}^2\over 4} + {P^2\over 12N\,L_x^2}\right)\qquad \hbox{for fixed }t_x\ ,}{elr tx' sigma}
+\eqref{\si^2_{t'} \equiv \Exp{t'^2} - \Exp{t'}^2 = 4 p^2 t \left[{\si_{\th}^2\over 4} + {P^2\over 24N}\left({1\over L_x^2} + {1\over L_y^2}\right)\right]\qquad \hbox{for fixed }t\ .}{elr t' sigma}
 The relative resolution, then, gains the commonly used $A/\sqrt{t}$ form:
-\eqref{{\si_{t_x'}\over t_x}  = {A\over\sqrt{t_x}},\qquad A = 2p \sqrt{ {\si_{\th}^2\over 4} + {P^2\over 12N\,L_x^2}}\ ,}{tx' resolution}
-\eqref{{\si_{t'}\over t}  = {A\over\sqrt{t}},\qquad A = 2p \sqrt{{\si_{\th}^2\over 4} + {P^2\over 24N}\left({1\over L_x^2} + {1\over L_y^2}\right)}}{t' resolution}
+\eqref{{\si_{t_x'}\over t_x}  = {A\over\sqrt{t_x}},\qquad A = 2p \sqrt{ {\si_{\th}^2\over 4} + {P^2\over 12N\,L_x^2}}\ ,}{elr tx' resolution}
+\eqref{{\si_{t'}\over t}  = {A\over\sqrt{t}},\qquad A = 2p \sqrt{{\si_{\th}^2\over 4} + {P^2\over 24N}\left({1\over L_x^2} + {1\over L_y^2}\right)}}{elr t' resolution}
 
 \iffalse
 One may also define variable $\de$
-\eqref{\de^2 = {(t_x' - t_x)^2\over t_x^2} \Rightarrow \sqrt{\Exp{\de^2}} = {\si_{t_x'}\over t_x}}{delta for tx}
+\eqref{\de^2 = {(t_x' - t_x)^2\over t_x^2} \Rightarrow \sqrt{\Exp{\de^2}} = {\si_{t_x'}\over t_x}}{elr delta for tx}
 \fi
 
 \subsection[1540]{Performance at 1540 m optics}
@@ -174,7 +174,7 @@ Let us recall that double arm fits were employed (details in section \sref{algo}
 
 \ssubsection{Case without beam smearing}
 
-\Fg{1540 nosm resolution} shows errors of angular and vertex reconstruction. The right plot clearly demonstrates that vertex resolution is poor for this optics. Relative error of $t$ determination is shown in \Fg{1540 nosm t}. The blue curve represents fit of $A/\sqrt{t}$ and it describes the data well. The fit gives $A = 0.9\cdot10^{-3}\un{GeV}$, while the estimate \Eq{tx' resolution} predicts $A = 0.8\cdot10^{-3}\un{GeV}$ (for $N=6$). One can conclude that both values well agree.
+\Fg{1540 nosm resolution} shows errors of angular and vertex reconstruction. The right plot clearly demonstrates that vertex resolution is poor for this optics. Relative error of $t$ determination is shown in \Fg{1540 nosm t}. The blue curve represents fit of $A/\sqrt{t}$ and it describes the data well. The fit gives $A = 0.9\cdot10^{-3}\un{GeV}$, while the estimate \Eq{elr tx' resolution} predicts $A = 0.8\cdot10^{-3}\un{GeV}$ (for $N=6$). One can conclude that both values well agree.
 
 \Fg{1540 nosm stat,1540 nosm chisq} demonstrate statistical behavior of the fits. One should emphasize that uncertainty of RP spatial measurement was fixed to $66\un{\mu m}/\sqrt{12}$ \footnote{
 In fact, as there are 5 planes for each coordinate, one might expect resolution of $66\un{\mu m}/\sqrt{12\cdot 5}$. However, it is a profound fact that a vast majority of protons hit all the five detector planes within the same strip. That's why one cannot directly apply the $1/\sqrt{N}$ statistical rule.}.
@@ -191,10 +191,10 @@ Majority of events produced fits with two and four degrees of freedom, that mean
 \fig[11cm]{erfig/pdf/1540_nosm_chisq.pdf}{1540 nosm chisq}{Histograms of normalized residual sums (for $y$ fits, plots for $x$ fits look similarly). Left for 2 degrees of freedom, right for 4. Red and blue curves show theoretical $\chi^2$ distributions.}
 
 Before moving to the next section, let's briefly discus efficiency of the algorithm, i.e. numbers of rejected events. The results are shown in \Tb{1540 efficiency}. One can see quite low number ($< 2\%$) of inconsistent fits, which is correct as no constraints were imposed. The present number corresponds to pathological events (e.g. when a proton interacts in front RP and therefore measurement in back RP is misleading). There are many events empty or insufficient. However, this can be easily explained geometrically. Assuming that $t$ distribution falls off exponentially, i.e. $t\sim b\exp(-bt)$, and $\ph$ is uniformly distributed on $\langle 0, 2\pi)$, one finds that angles $\th_x$ and $\th_y$ are independent and follow normal distribution $N(0, \si^2 = 1/2bp^2)$ where $p$ is momentum of protons. Therefore, probability of $|\th_y|<\th_y^{\rm min}$ is given by
-\eqref{P(|\th_y|<\th_y^{\rm min}) = {\rm Erf(\th_y^{\rm min}/\sqrt{2\si^2})}\ .}{}
+\eqref{P(|\th_y|<\th_y^{\rm min}) = {\rm Erf(\th_y^{\rm min}/\sqrt{2\si^2})}\ .}{elr }
 And consequently, fraction of empty and insufficient events is
-\eqref{P(\hbox{empty}) = {\rm Erf}\left( \de_y\, p\, \sqrt{b}\over L_y \right)\, {\rm Erf}\left( \de_x\, p\, \sqrt{b}\over L_x \right) \approx 4.4\un{\%}\ ,}{no road}
-\eqref{P(\hbox{insufficient}) = {\rm Erf}\left( \de_y\, p\, \sqrt{b}\over L_y \right)\, \left[ 1 - {\rm Erf}\left( \de_x\, p\, \sqrt{b}\over L_x \right) \right ] \approx 13\un{\%}\ ,}{no good road}
+\eqref{P(\hbox{empty}) = {\rm Erf}\left( \de_y\, p\, \sqrt{b}\over L_y \right)\, {\rm Erf}\left( \de_x\, p\, \sqrt{b}\over L_x \right) \approx 4.4\un{\%}\ ,}{elr no road}
+\eqref{P(\hbox{insufficient}) = {\rm Erf}\left( \de_y\, p\, \sqrt{b}\over L_y \right)\, \left[ 1 - {\rm Erf}\left( \de_x\, p\, \sqrt{b}\over L_x \right) \right ] \approx 13\un{\%}\ ,}{elr no good road}
 where $b \approx 20\un{GeV^{-2}}$ was used and $\de$ and $L$ parameters are to be found in \Tb{optics}. These estimates correspond well with \Tb{1540 efficiency} (one should keep in mind that many effects, like insensitive edge, were not taken into account).
 
 \htab{1540 efficiency}{Efficiency of the algorithm (sample of $10^4$ events). Column ``empty events'' refers to events with no signal and column ``insufficient events'' with signal insufficient to perform the fit (see step 1 in the algorithm, section \sref{algo}). The four right-most columns show numbers of events rejected because of inconsistent right and left fits (see step 3 of the algorithm).}{
@@ -211,11 +211,11 @@ where $b \approx 20\un{GeV^{-2}}$ was used and $\de$ and $L$ parameters are to b
 \Fg{1540 sm resolution} shows precision of angular and vertex reconstruction. The dominant error source for angular reconstruction is the beam divergence and therefore all $\th_x$, $\th_y$ and $\th$ variances are practically identical\footnote{%
 Since $\th^2 = \th_x^2 + \th_y^2$ one may naively expect that $\si_{\th} > \si_{\th_{x, y}}$. However, a careful error propagation yields
 $$\si^2_{\th} = \si^2\big(\sqrt{\th_x^2 + \th_y^2}\big) = {\th_x^2\over \th_x^2 + \th_y^2}\, \si^2_{\th_x} + {\th_y^2\over \th_x^2 + \th_y^2}\, \si^2_{\th_y} = {\si^2_{\rm bd}\over 2}\ .$$
-In the last step we employed $\si_{\th_x} = \si_{\th_y} = \si_{\rm bd}/2$ (compare with $\de\th_x$ in \Eq{fit simple}). Therefore variances of $\th$, $\th_x$ and $\th_y$ are equal.
+In the last step we employed $\si_{\th_x} = \si_{\th_y} = \si_{\rm bd}/2$ (compare with $\de\th_x$ in \Eq{elr fit simple}). Therefore variances of $\th$, $\th_x$ and $\th_y$ are equal.
 }%
-. The relative $t$-resolution shown in \Fg{1540 sm tres} was fitted by $A/\sqrt{t}$ (as suggested by \Eq{t' resolution}) yielding $A = 2.2\cdot10^{-3}\un{GeV}$. Analytical estimate gives $A = 2.2\cdot10^{-3}\un{GeV}$, which agrees with fit result.
+. The relative $t$-resolution shown in \Fg{1540 sm tres} was fitted by $A/\sqrt{t}$ (as suggested by \Eq{elr t' resolution}) yielding $A = 2.2\cdot10^{-3}\un{GeV}$. Analytical estimate gives $A = 2.2\cdot10^{-3}\un{GeV}$, which agrees with fit result.
 
-As already said, it is useful to plot right-left fit differences, see \Fg{1540 right left diff smear}. This information can be used to set reasonable values of tolerance parameters (of course, these plots should be compared to corresponding plots obtained for background). Considering the properties of the optics (parallel-to-point focusing), one can expect rather a wide distribution of vertex differences. This expectation is well supported by the figure. Therefore, cut based on vertex differences is not very promising. Regarding $\De_{R-L}\th_y$, it is reasonable to expect it to be dominated by beam divergence. In other words, its distribution shall have RMS of beam divergence (compare \Eq{angular smearing,fit simple}). It really does, but one might be surprised by the peaks. 
+As already said, it is useful to plot right-left fit differences, see \Fg{1540 right left diff smear}. This information can be used to set reasonable values of tolerance parameters (of course, these plots should be compared to corresponding plots obtained for background). Considering the properties of the optics (parallel-to-point focusing), one can expect rather a wide distribution of vertex differences. This expectation is well supported by the figure. Therefore, cut based on vertex differences is not very promising. Regarding $\De_{R-L}\th_y$, it is reasonable to expect it to be dominated by beam divergence. In other words, its distribution shall have RMS of beam divergence (compare \Eq{elr angular smearing,fit simple}). It really does, but one might be surprised by the peaks. 
 
 \break\hbox{}\kern-14mm
 \fig[14cm]{erfig/pdf/1540_sm_resolution.pdf}{1540 sm resolution}{Angular (left) and vertex (right) resolutions.}
@@ -225,14 +225,14 @@ As already said, it is useful to plot right-left fit differences, see \Fg{1540 r
 \fig[15.9cm]{erfig/pdf/1540_right_left_diff_smear.pdf}{1540 right left diff smear}{Right-left differences in $\th_y$ and $y^*$ fit results. Plots for $x$ coordinate are qualitatively the same.}
 
 To understand the peak appearance, we should go back and discuss what data are inserted to the reconstruction algorithm. Every RP has 5 $u$ and 5 $v$ strip detectors. Measurements from each group are (roughly speaking) averaged, yielding one $u, v$ point per RP. This point is, then, rotated by $45\un{^\circ}$ to obtain $x$ and $y$ coordinates of the hit. The detectors have strip pitch $P = 66\un{\mu m}$ and therefore any possible (single detector) measurement outcome can be written as
-\eqref{u\hbox{ or }v = {\rm const.} + P\, k\ ,}{u peaks}
-where $k$ is an integer. Moreover, particles detected in RPs have very small scattering angles and thus, very often, the same strip is hit in all 5 $u$, resp. $v$ strip detectors. This means that the averaged $u, v$ coordinates are peaked at values given by \Eq{u peaks}. After the rotation to $x, y$ space, the peaks in hit distribution are separated by $P/\sqrt{2}$ (this is the gap between two closest $x$ or $y$ outcomes). This fact is documented by \Fg{1540 peaks}A.
+\eqref{u\hbox{ or }v = {\rm const.} + P\, k\ ,}{elr u peaks}
+where $k$ is an integer. Moreover, particles detected in RPs have very small scattering angles and thus, very often, the same strip is hit in all 5 $u$, resp. $v$ strip detectors. This means that the averaged $u, v$ coordinates are peaked at values given by \Eq{elr u peaks}. After the rotation to $x, y$ space, the peaks in hit distribution are separated by $P/\sqrt{2}$ (this is the gap between two closest $x$ or $y$ outcomes). This fact is documented by \Fg{1540 peaks}A.
 
-Now, one may insert \Eq{u peaks} to \Eq{fit} and find where the peaks of angular distributions are. However, performing that in full generality would be complicated and not instructive. But, let's try out the (so far well working) approximation from Appendix A. Inserting $y_i = y^0_i + k_i P / \sqrt2$ into \Eq{fit 2} yields
-\eqref{\th_y' = \th_y^0 + {P\over N L_y \sqrt2} \left(\sum_R k_i - \sum_L k_i\right)\ .}{th peaks}
+Now, one may insert \Eq{elr u peaks} to \Eq{elr fit} and find where the peaks of angular distributions are. However, performing that in full generality would be complicated and not instructive. But, let's try out the (so far well working) approximation from Appendix A. Inserting $y_i = y^0_i + k_i P / \sqrt2$ into \Eq{elr fit 2} yields
+\eqref{\th_y' = \th_y^0 + {P\over N L_y \sqrt2} \left(\sum_R k_i - \sum_L k_i\right)\ .}{elr th peaks}
 Since the factor in parentheses is integer, peaks at distance $P/(\sqrt2 N L_y)$ can be expected. Using this equation, let's express the right-left difference
-\eqref{\De_{R-L}\th_y \equiv \th_y^R - \th_y^L =  {\rm const.} + {P\over 2 L_y \sqrt2} \left(\sum_R k_i + \sum_L k_i\right) = {\rm const.} + {P\over L_y \sqrt2} (k^R + k^L)\ ,}{drl th peaks}
-where, for simplicity, we constrained ourselves to the case with 2 hits per arm. In this simple approach, all effective $L$ are identical within one arm and therefore so $k_i$'s are. In other words $\sum_R k_i = 2 k^R$, which justifies the last equality in \Eq{drl th peaks}. The peaks are predicted with spacing $P/(\sqrt2 L_y)\approx 0.17\un{rad}$, which perfectly agrees with \Fg{1540 right left diff smear}.
+\eqref{\De_{R-L}\th_y \equiv \th_y^R - \th_y^L =  {\rm const.} + {P\over 2 L_y \sqrt2} \left(\sum_R k_i + \sum_L k_i\right) = {\rm const.} + {P\over L_y \sqrt2} (k^R + k^L)\ ,}{elr drl th peaks}
+where, for simplicity, we constrained ourselves to the case with 2 hits per arm. In this simple approach, all effective $L$ are identical within one arm and therefore so $k_i$'s are. In other words $\sum_R k_i = 2 k^R$, which justifies the last equality in \Eq{elr drl th peaks}. The peaks are predicted with spacing $P/(\sqrt2 L_y)\approx 0.17\un{rad}$, which perfectly agrees with \Fg{1540 right left diff smear}.
 
 \bmfig[\flab{1540 peaks}To the explanation of peaks in $\th_y$ distribution. Plot A shows quantization of measured $y$ coordinate. The other three plots describe steps of MC simulation: single effective length approach (B), realistic effective length used (C) and finally partial (strip-)quantization included (D).]
 \fig*[7cm]{erfig/pdf/1540_strip_quantization.pdf}{}{}{}{A}{}
@@ -243,7 +243,7 @@ where, for simplicity, we constrained ourselves to the case with 2 hits per arm.
 
 There have been two important facts omitted in the previous paragraph: different effective lengths present and several hits counts (e.g. the dominant configuration has 4 hits at one arm and 2 at the other). It would be complicated to incorporate those two effects in the analytic calculation and that is why we rather performed a simple MC simulation. The results are shown in \Fg{1540 peaks}. Plot A corresponds to the approximation of the previous paragraph. Plot B was obtained for realistic $L_i$ values and for $2+2$ and $4+2$ hit configurations. Eventually, we added the effect of partial (strip-)discretization of $y$ values and the plot C was obtained. This plot well reproduces \Fg{1540 right left diff smear}. However, note the secondary structure with half pitch of the main peaks in the MC plot. This is probably due to other effects not included to the MC simulation.
 
-As the last comment, let's address the detector shifts. Displacing horizontal detectors would change only the constant terms in \Eq{u peaks,drl th peaks} and thus the entire peak structure would just move. The same effect takes place if top and bottom vertical pots are shifted simultaneously. But if they are moved independently, the whole picture changes. We stop this discussion here as it is not the primary goal of this article.
+As the last comment, let's address the detector shifts. Displacing horizontal detectors would change only the constant terms in \Eq{elr u peaks,drl th peaks} and thus the entire peak structure would just move. The same effect takes place if top and bottom vertical pots are shifted simultaneously. But if they are moved independently, the whole picture changes. We stop this discussion here as it is not the primary goal of this article.
 
 
 
@@ -266,11 +266,11 @@ The last parameter which has not been discussed yet, is $\th_y$ tolerance. For t
 \kern-1.6cm
 \fig[7cm]{erfig/pdf/90_t_resolution_nosmear.pdf}{90 ty res nosmear}{Relative $t$ resolution.}
 
-The angular resolution is shown in \Fg{90 angle nosmear}. The $\th_x$ precision is very bad, as expected. Relative error of $t_y$ reconstruction, shown in \Fg{90 ty res nosmear}, was fitted by \Eq{tx' resolution}. The fit gives $A = 7.1\cdot10^{-4}\un{GeV}$, while analytic estimation yields $A = 5.3\cdot10^{-4}\un{GeV}$ for $N = 4$, which is the dominant configuration. The analytical uncertainty is apparently slightly underestimated.
+The angular resolution is shown in \Fg{90 angle nosmear}. The $\th_x$ precision is very bad, as expected. Relative error of $t_y$ reconstruction, shown in \Fg{90 ty res nosmear}, was fitted by \Eq{elr tx' resolution}. The fit gives $A = 7.1\cdot10^{-4}\un{GeV}$, while analytic estimation yields $A = 5.3\cdot10^{-4}\un{GeV}$ for $N = 4$, which is the dominant configuration. The analytical uncertainty is apparently slightly underestimated.
 
 \Fg{90 vertex nosmear} shows vertex reconstruction potential. As magnifications $v_y$ are low for this optics, precision of $y^*$ reconstruction is poor.
 
-Important statistical properties of the fits can be seen in \Fg{90 statistics no smear 1}. The left-hand side plot shows that most events include 4 hits, i.e. 2 degrees of freedom. The right-hand plot shows residual sum of squares for events with 2 degrees of freedom. The histogram is compared to $\chi^2(\nu = 2)$ distribution drawn in red. The histogram is quite close to the desired distribution. \Fg{90 statistics no smear 2} presents a histogram of $\th_y$ error divided by fit uncertainty. Ideally (if included error sources were Gaussian-like), the histogram should form a Gaussian with RMS one. But since strip-rounding error behaves rather like $\de x$ in \Eq{fit simple}, one need not be surprised that the histogram deviates from Gaussian shape.
+Important statistical properties of the fits can be seen in \Fg{90 statistics no smear 1}. The left-hand side plot shows that most events include 4 hits, i.e. 2 degrees of freedom. The right-hand plot shows residual sum of squares for events with 2 degrees of freedom. The histogram is compared to $\chi^2(\nu = 2)$ distribution drawn in red. The histogram is quite close to the desired distribution. \Fg{90 statistics no smear 2} presents a histogram of $\th_y$ error divided by fit uncertainty. Ideally (if included error sources were Gaussian-like), the histogram should form a Gaussian with RMS one. But since strip-rounding error behaves rather like $\de x$ in \Eq{elr fit simple}, one need not be surprised that the histogram deviates from Gaussian shape.
 
 \Tb{90 efficiency} summarizes numbers of rejected events. There is evidently high number of empty events. But again, this can be explained geometrically. In principle, one might follow the same prescription as for $1540\un{m}$ optics. However, here one should consider relatively high lower bound of simulated events: $2.5\cdot10^{-2} < |t|$. Then, the calculation gets complicated. We performed a MC simulation instead, yielding $53\un{\%}$ probability of empty event. This corresponds well to the observed frequencies. As $L_x\approx 0$, horizontal RPs are not involved in elastic events and there is no geometrical reason for insufficient events. Those 103 events correspond to problematic events, for instance when proton was registered at one arm only etc.
 
@@ -292,7 +292,7 @@ Important statistical properties of the fits can be seen in \Fg{90 statistics no
 
 The analysis was repeated for simulation with smearing applied (smearing parameters are to be found in \Tb{smearing}). The $\th_y$ tolerance had to be increased because of the beam divergence. The value used was $8\cdot10^{-6}\un{rad}$ (compare with left plot of \Fg{90 right left diff smear}).
 
-Interesting angular and vertex reconstruction results are shown in \Fg{90 angle vertex smear}. Relative errors of $t$ components are plotted in \Fg{90 t res smear}. All of them follow the $A/\sqrt{t_y}$ rule. But as $t_x$ measurement introduces a significant error, only $t_y$ is of practical use. The of $t_y$ resolution gives $A = 1.7\cdot10^{-2}$, just as estimate by \Eq{tx' resolution}.
+Interesting angular and vertex reconstruction results are shown in \Fg{90 angle vertex smear}. Relative errors of $t$ components are plotted in \Fg{90 t res smear}. All of them follow the $A/\sqrt{t_y}$ rule. But as $t_x$ measurement introduces a significant error, only $t_y$ is of practical use. The of $t_y$ resolution gives $A = 1.7\cdot10^{-2}$, just as estimate by \Eq{elr tx' resolution}.
 
 \hbox{}
 \kern-2.0cm
@@ -318,7 +318,7 @@ It would be definitely worth testing the performance of the algorithm on a sampl
 There is one issue already known. Let's imagine a situation when a proton interacts in/after $214\un{m}$ unit. Indeed, it gets deflected and if it reaches further detectors, the information is misleading. In such a case one should omit information from affected RPs. That should be done on the level of selection, but unfortunately the present road search algorithm is not sensitive enough. Fortunately, those events are rather rare.
 
 \iffalse
-In order to avoid those problems, it is necessary to improve the selection algorithm. Instead of road search algorithm, one can use a proper pattern recognition algorithm with pattern defined by \Eq{track general}. This can be implemented on the level of elastic reconstruction or better a lever lower. Instead of (current) selecting hits RP by RP, this might be done using all hits available. This might be very useful in the case a detector has more than one hit. Using information from other detectors, one may remove the ambiguity in pairing $u$ and $v$ strips. This needs to be discussed.
+In order to avoid those problems, it is necessary to improve the selection algorithm. Instead of road search algorithm, one can use a proper pattern recognition algorithm with pattern defined by \Eq{elr track general}. This can be implemented on the level of elastic reconstruction or better a lever lower. Instead of (current) selecting hits RP by RP, this might be done using all hits available. This might be very useful in the case a detector has more than one hit. Using information from other detectors, one may remove the ambiguity in pairing $u$ and $v$ strips. This needs to be discussed.
 \fi
 
 
